--- a/landingPage-challenge/style.css
+++ b/landingPage-challenge/style.css
@@ -320,6 +320,7 @@ span {
 footer {
      background-color: #90d4c5;
      color: #2e7565;
+     height: 37ex;
 }
 footer h3 {
      text-align: center;
